# nexus

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  opencode.json  pyproject.toml
docs/: sitemap.xml
docs/systems/aquilo/: 404.html  index.html
docs/systems/croid/: 404.html  index.html
docs/systems/fulgora/: 404.html  index.html
docs/systems/gleba/: 404.html  index.html
docs/systems/nauvis/: 404.html  index.html
docs/systems/nexus/: 404.html  index.html
docs/systems/pomus/: 404.html  index.html
docs/systems/vulcanus/: 404.html  index.html
scripts/: build_docs.sh
site/: 404.html  index.html  sitemap.xml
site/systems/croid/: 404.html  objects.inv
site/systems/fulgora/: 404.html  index.html
site/systems/nauvis/: 404.html
site/systems/nexus/: 404.html  index.html
site/systems/pomus/: 404.html
site/systems/vulcanus/: index.html
systems/aquilo/: README.md  mkdocs.yml
systems/aquilo/docs/: index.md
systems/croid/: README.md  mkdocs.yml
systems/croid/docs/: index.md
systems/fulgora/: README.md  mkdocs.yml
systems/fulgora/docs/: index.md
systems/fulgora/ror/: get_ror.py
systems/gleba/: README.md  mkdocs.yml
systems/gleba/docs/: index.md
systems/nauvis/: README.md  mkdocs.yml
systems/nauvis/docs/: index.md
systems/nexus/: README.md  mkdocs.yml
systems/pomus/: README.md  mkdocs.yml  test.html
systems/pomus/docs/: index.md
systems/storage/: README.md
systems/vulcanus/: README.md  mkdocs.yml
systems/vulcanus/docs/: index.md
